# elastic-mcp

./: .gitignore  README.md  mcp_client.py  package-lock.json  pyproject.toml  requirements.txt
tools/: elastic_tool.py
